# chatto

./: AGENT.md  Cargo.toml  README.md
src/: app.rs  chat.rs  main.rs  ollama.rs  session.rs  tools.rs
