[package]
description = "A Rust web server that handles chat sessions with user and assistant messages, using async HTTP requests and session storage."
name = "chatto"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
strum = { version = "0.27.2", features = ["derive", "strum_macros"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
config = "0.15.19"
futures-util = "0.3"
serde_yaml = "0.9"
rustyline = "14.0"
dir = "0.1.2"
tempfile = "3.24.0"
